--- a/Book.html
+++ b/Book.html
@@ -31,7 +31,7 @@
             <button type="submit" class="btn btn-danger">Add Book</button>
         </form>
 
-        <h3>Update Book Price</h3>
+        <h3>Update Book Price:</h3>
         <form id="updateBookPriceForm">
             <div class="form-group">
                 <label for="updateTitle">Title:</label>
@@ -46,7 +46,7 @@
             <button type="submit" class="btn btn-danger">Update Price</button>
         </form>
 
-        <h3>Update Book Quantity</h3>
+        <h3>Update Book Quantity:</h3>
         <form id="updateBookQuantityForm">
             <div class="form-group">
                 <label for="updateQuantityTitle">Title:</label>
