--- a/Registration.html
+++ b/Registration.html
@@ -30,7 +30,7 @@
                 <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                 <div id="confirmPasswordError" class="text-danger"></div>
             </div>
-            <button type="submit" class="btn btn-danger">Register</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
 
